# StasiksKillerGame

./: .gitignore  CMakeLists.txt  Readme.md
include/controllers/: gameController.h
include/core/: hardcodedLevelBuilder.h  iLevelBuilder.h  stasiksKillerApplication.h
include/models/: gameMap.h  gameState.h
include/models/gameObjects/: bullet.h  dynamicGameObject.h  enemy.h  gameObject.h  gameTypes.h  player.h  unit.h  wall.h
qml/: Bullet.qml  Enemy.qml  GameView.qml  Main.qml  MainMenu.qml  Player.qml
src/: main.cpp
src/controllers/: gameController.cpp
src/core/: hardcodedLevelBuilder.cpp  stasiksKillerApplication.cpp
src/models/: gameMap.cpp  gameState.cpp
src/models/gameObjects/: bullet.cpp  dynamicGameObject.cpp  enemy.cpp  gameObject.cpp  player.cpp  unit.cpp  wall.cpp
